# Predict-Customer-Churn

./: Baselines.ipynb  EDA.ipynb  Experiments.ipynb  README.md  pyproject.toml
data/models/: catboost_best_params.json  lgbm_best_params.json  lr_best_threshold.json  lr_pipeline.pkl  xgb_best_params.json
data/processed/: test_df.parquet  xgb_oof_proba.npy
experiments/: runs.csv
experiments/runs/20260424-194123-594ade/: feature_importance.csv  git_diff.patch  metrics.json  notes.md  params.json  test_proba_mean.npy
experiments/runs/20260424-194123-594ade/models/: fold_0.joblib  fold_1.joblib  fold_2.joblib  fold_3.joblib  fold_4.joblib
experiments/runs/20260424-195649-307853/: git_diff.patch  metrics.json  notes.md  params.json  test_proba_mean.npy
experiments/runs/20260424-195649-307853/models/: fold_0.joblib  fold_1.joblib  fold_2.joblib  fold_3.joblib  fold_4.joblib
experiments/runs/20260424-200702-c831e4/: metrics.json  notes.md  params.json  test_proba_mean.npy
experiments/runs/20260424-200702-c831e4/models/: fold_0.joblib  fold_1.joblib  fold_2.joblib  fold_3.joblib  fold_4.joblib
experiments/runs/20260424-203804-5a6511/: environment.txt  git_diff.patch  metrics.json  notes.md  params.json  test_proba_mean.npy
experiments/runs/20260424-203804-5a6511/models/: fold_0.joblib  fold_1.joblib  fold_2.joblib  fold_3.joblib  fold_4.joblib
