[project]
name = "predict-customer-churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
